# cambio-actual

./: .gitignore  CHANGELOG  README.md  README_ES.md  api.py  api_toque.py  main.py  pyproject.toml  requirements.txt  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: Build.yml  build.yml
app/: build.gradle.kts
app/cambio-actual/main/: AndroidManifest.xml
app/cambio-actual/main/java/com/aewaredev/cambioactual/data/api/: AuthInterceptor.kt  BackendApiService.kt  NetworkModule.kt  UdyatApiService.kt  UpdateApiService.kt
app/cambio-actual/main/java/com/aewaredev/cambioactual/data/local/: AppDatabase.kt  RateDao.kt
app/cambio-actual/main/java/com/aewaredev/cambioactual/data/model/: ApiResponse.kt  AuthModels.kt  ExchangeRate.kt  GitHubRelease.kt  MarketplacePost.kt  Rating.kt  Report.kt  UdyatHistoricoResponse.kt  UdyatMsgResponse.kt  UdyatResponse.kt  UserProfile.kt  VerificationStatus.kt
app/cambio-actual/main/res/drawable/: ic_launcher_background.xml
app/cambio-actual/main/res/xml/: file_paths.xml  network_security_config.xml
app/cambio-actual/test/java/com/aewaredev/cambioactual/: ExampleUnitTest.kt
app/src/androidTest/java/com/aewaredev/cambioactual/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aewaredev/cambioactual/: MainActivity.kt
app/src/main/java/com/aewaredev/cambioactual/ui/theme/: Color.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: exchange_widget_info.xml  quick_widget_info.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
screenshots/: android.tgs
(+70 files in other folders)
