[project]

name = "ca"
version = "0.0.5"
description = "A real-time currency exchange rate and cryptocurrency price viewer built with Flet."
authors = [
  {name = "ELJoker63", email = "eljoker630@gmail.com"}
]
dependencies = ["flet", "requests"]

[tool.flet.app]
exclude = ["__pycache__", "requirements.txt", ".gitignore", "README.md", "README_ES.md", "CHANGELOG", "pyproject.toml", "build", ".gitattributes", ".github", ".venv", "screenshots", "storage", ".git"]

[tool.flet]
org = "com.aewaredev"
product = "Cambio Actual"
company = "AEwareDev"
copyright = "Copyright (C) 2025 by AEwareDev"
build_number = 202501291
#permissions = ["storage", "internet", "phone"]
flutter.dependencies = ["flet_lottie", "flet_permission_handler"]

[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.BACKGROUND_REFRESH" = true
"android.permission.IGNORE_BATTERY_OPTIMIZATIONS" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.MEDIA_LIBRARY" = true
"android.permission.STORAGE" = true
"android.permission.INTERNET" = true
#"android.permission.ACCESS_MEDIA_LOCATION" = true
#"android.permission.PHONE" = true

[tool.flet.android.signing]
# store and key passwords can be passed with `--android-signing-key-store-password`
# and `--android-signing-key-password` options or
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# and FLET_ANDROID_SIGNING_KEY_PASSWORD environment variables.
#key_store = "build/bytebloom.jks" # --android-signing-key-store
#key_alias = "bytebloom"
#FLET_ANDROID_SIGNING_KEY_PASSWORD = "bytebloom"